avis with product integration