@@ -1,17 +1,16 @@
 package com.esprit.ms.avis.Controller;
 
-
-
-import com.esprit.ms.avis.service.AvisService;
 import com.esprit.ms.avis.dto.AvisRequest;
 import com.esprit.ms.avis.dto.AvisResponse;
 import com.esprit.ms.avis.mapper.AvisMapper;
+import com.esprit.ms.avis.service.AvisService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.net.URI;
+import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
@@ -27,20 +26,20 @@ public class AvisController {
                 .body(AvisMapper.toDto(saved));
     }
 
-    @GetMapping("/article/{articleId}")
-    public ResponseEntity<?> listByArticle(@PathVariable Long articleId) {
-        var list = service.byArticle(articleId).stream().map(AvisMapper::toDto).collect(Collectors.toList());
+    @GetMapping("/product/{productId}")
+    public ResponseEntity<List<AvisResponse>> listByProduct(@PathVariable String productId) {
+        var list = service.byProduct(productId).stream().map(AvisMapper::toDto).toList();
         return ResponseEntity.ok(list);
+    }
+
+    @GetMapping("/product/{productId}/average")
+    public ResponseEntity<Double> average(@PathVariable String productId) {
+        return ResponseEntity.ok(service.averageForProduct(productId));
     }
 
     @GetMapping("/user/{userId}")
-    public ResponseEntity<?> listByUser(@PathVariable Long userId) {
-        var list = service.byUser(userId).stream().map(AvisMapper::toDto).collect(Collectors.toList());
+    public ResponseEntity<List<AvisResponse>> listByUser(@PathVariable Long userId) {
+        var list = service.byUser(userId).stream().map(AvisMapper::toDto).toList();
         return ResponseEntity.ok(list);
-    }
-
-    @GetMapping("/article/{articleId}/average")
-    public ResponseEntity<Double> average(@PathVariable Long articleId) {
-        return ResponseEntity.ok(service.averageForArticle(articleId));
     }
 }
